@@ -1,3 +1,4 @@
 bits/mman.h
 clone.S
 mremap.S
+sys/reg.h
